--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -22,6 +22,7 @@ ___________________________________________________________
 -> Added global cellspacing variable (duriel)
 -> Added pictures mod that allows implementing pictures to all mods easily (duriel)
 -> Added the possibility to add automatically created news about a clanwar (duriel)
+-> Added squad text (duriel)
 -> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
 -> Used some more caching to enhance the performance (duriel)
 
