--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -24,6 +24,7 @@ ___________________________________________________________
 -> Added pictures mod that allows implementing pictures to all mods easily (duriel)
 -> Added the possibility to add automatically created news about a clanwar (duriel)
 -> Added squad text (duriel)
+-> Improved Squad View with text, wars, awards and ranks (GaHero)
 -> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
 -> Updated fckeditor to version 2.6.4 beta (hajo)
 -> Used some more caching to enhance the performance (duriel)
