--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -28,7 +28,7 @@ ___________________________________________________________
 -> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
 -> Used some more caching to enhance the performance (duriel)
 -> Updated fckeditor to version 2.6.4 beta (hajo)
--> Added close for comments feature to wars (hajo)
+-> Added comments feature to events and updated it for wars (hajo)
 
 
 ClanSphere 2008.2.1 >> 2008-09-20
