--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -34,7 +34,9 @@ ___________________________________________________________
 -> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
 -> Used some more caching to enhance the performance (duriel)
 -> Updated fckeditor to version 2.6.4 beta (hajo)
--> Added comments feature to events and updated it for wars (hajo)
+-> Added comments feature to events and fixed it in wars mod (hajo)
+-> Reworked events mod to support guests (hajo)
+-> Reworked cs_addons function to support count queries and look even better (hajo)
 
 
 ClanSphere 2008.2.1 >> 2008-09-20
