--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,7 +4,7 @@ CHANGELOG
 ClanSphere 2008.3_svn >> 0000-00-00
 ___________________________________________________________
 
--> Added Medaillen Modul to Clansphere
+-> Added and reworked Medaillen Modul to Clansphere
 -> Fixed all modules now use cs_user function
 -> Fixed users_remove without loose database integrity
 -> Fixed preview of signatures in board (BugtrackerID: 209, Denni)
