improved handling of filetypeicons (possibility to use same icon for multiple filetypes) / new filetypeicons

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,12 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2009.0 >> 2009-xx-xx
+___________________________________________________________
+
+-> improved handling of filetypeicons
+
+
 ClanSphere 2009.0 RC1 >> 2009-03-25
 ___________________________________________________________
 
