--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,7 +4,7 @@ CHANGELOG
 ClanSphere 2009.0 >> 20xx-xx-xx
 ___________________________________________________________
 
--> improved handling of filetypeicons
+-> Improved handling of filetypeicons (gahero)
 
 
 ClanSphere 2009.0 RC1 >> 2009-03-25
