--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,11 +1,16 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2009.0 >> 20xx-xx-xx
+ClanSphere 2009.0 RC2 >> 2009-04-xx
 ___________________________________________________________
 
 -> Improved handling of filetypeicons (gahero)
 -> Hiding squads in fightus will also hide them in wars now (gahero)
+-> Fixed alot of path settings in themes to be compatible with mod_rewrite (gahero, hajo)
+-> Fixed many bugs inside the logs mod and added php errors to error log files (hajo)
+-> Reworked sec_news to only scan for news every 2,5 hours and be displayed everywhere (hajo)
+
+-- Fixed a huge number of bugs and a few wishes that were reported at "Trac" --
 
 
 ClanSphere 2009.0 RC1 >> 2009-03-25
