--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,9 @@ ___________________________________________________________
 
 -> Added compatible-view for old browsers to cs_manage function (hajo)
 -> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
+-> Fixed many getimagesize php notice issues (hajo)
+
+-- Fixed a huge number of bugs that were reported at "Trac" --
 
 
 ClanSphere 2009.0 RC2 >> 2009-04-05
