--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,8 @@ ___________________________________________________________
 -> Added compatible-view for old browsers to cs_manage function (hajo)
 -> Added possibilities to close or pinup threads during writing, close also for create commentes (fay-pain)
 -> Fixed many getimagesize php notice issues (hajo)
+-> Installation detects and tests database extensions automated now (hajo)
+-> Reworked clansphere/software and database/roots page to be more helpful (hajo)
 
 -- Fixed a huge number of bugs that were reported at "Trac" --
 
