################################################# reworked SVN after 2009.0 RC 3 Release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,9 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2009.0 >> 2009-05-xx
+___________________________________________________________
+
 ClanSphere 2009.0 RC3 >> 2009-05-17
 ___________________________________________________________
 
