--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,8 @@ ___________________________________________________________
 
 -> Added support for Microsoft SQL Server 2005 and 2008 using the sqlsrv extension (hajo)
 -> Added title of articles, board threads, news and static pages to the end of func:title (hajo)
+-> Removed support for RSS in servers mod (hajo)
+-> Reworked handling of charsets for PostgreSQL and MySQL drivers (hajo)
 
 -- Fixed a huge number of bugs that were reported at "Trac" --
 
