--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ ___________________________________________________________
 -> Added support for Microsoft SQL Server 2005 and 2008 using the sqlsrv extension (hajo)
 -> Added title of articles, board threads, news and static pages to the end of func:title (hajo)
 -> Added new USK icons (gahero)
+-> Moved email options to contact mod and added smtp settings (hajo)
 -> Removed many reset buttons, because they are not useful (hajo)
 -> Removed support for RSS in servers mod (hajo)
 -> Reworked handling of charsets for PostgreSQL and MySQL drivers (hajo)
