--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,7 @@ CHANGELOG
 ClanSphere 2009.0.1 >> 2009-06-XX
 ___________________________________________________________
 
+-> Added the possibility to use xhtml_old mode by using a setup.php entry (hajo)
 -> Fixed cs_sql_insertid with Microsoft SQL Server [sqlsrv extension] (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
