--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,15 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2009.0.2 >> 2009-07-XX
+___________________________________________________________
+
+>> Security: Updated FCKEditor to 2.6.4.1
+
+-> Changed fckeditor quickupload to use the matching subdirectory (hajo)
+-> Fixed install settings to detect 'setup.php' when it was created (hajo)
+
+
 ClanSphere 2009.0.1 >> 2009-07-05
 ___________________________________________________________
 
