--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,9 @@ ___________________________________________________________
 -> Fixed deactivation of contact, joinus and fightus modul (duriel)
 -> Fixed vote for gallery pics (fr33z3m4n)
 -> Fixed categories creation without access (fr33z3m4n)
--> Fixed many bugs in the server modul (fr33z3m4n)
--> Fixed many bugs in the comments modul, also two security bugs (gahero)
+-> Fixed many bugs in the server module (fr33z3m4n)
+-> Fixed many bugs in the comments module, also two security bugs (gahero)
+-> Fixed some bugs in the cups module (duriel)
 
 
 ClanSphere 2009.0.2 >> 2009-07-07
