reworked SVN after Release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,14 @@
 CHANGELOG
 --------------------------
 
+
+
+ClanSphere 2010.0 >> xxxx-xx-xx
+___________________________________________________________
+
+
+
+
 ClanSphere 2009.0.3 >> 2009-12-06
 ___________________________________________________________
 
