--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,7 +6,7 @@ CHANGELOG
 ClanSphere 2010.0 >> xxxx-xx-xx
 ___________________________________________________________
 
-
+-> Added a medals list (duriel)
 
 
 ClanSphere 2009.0.3 >> 2009-12-06
