--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,12 +8,28 @@ ___________________________________________________________
 
 -> Added a medals list (duriel)
 -> Added mail-function to subscription (spongebob)
--> Added cache-function to {board:navtop} (spongebob)
--> Added {board:navtop2} (spongebob)
+-> Added cache-function to board/navtop (spongebob)
+-> Added board/navtop2 (spongebob)
 -> Added verification for users birthdate (spongebob)
--> Added date to {files:navlist} (spongebob)
+-> Added date to files/navlist (spongebob)
+-> Added fightus and joinus to users/navlogin (spongebob)
+-> Added automatically jump to the first unread comment of the thread (spongebob)
+-> Added notifymods-module (spongebob)
+-> Added email-notifications (notifymods-module) to fight us, guestbook, join us, download (spongebob)
+-> Added articles/navtop (spongebob)
+-> Added delete mirror checkbox to files/edit (spongebob)
+-> Added top9 (order) to abcode (spongebob)
+-> Added thread author annotation to board/thread (spongebob)
+-> Added search for clan names to clans/manage (spongebob)
+-> Fixed bug in user-gallery and gallery (spongebob)
+-> Fixed board-counter after delete a thread (spongebob)
+-> Fixed delete own board/subscription and board/attachments (spongebob)
 -> Changed: static linkus-vars now changeable (spongebob)
--> Reworked {users:nextbirth} and {users:navbirth} (spongebob)
+-> Changed: rename gallery-image if filename already existent (spongebob)
+-> Changed: user now changeable in cash/edit (spongebob)
+-> Reworked users/nextbirth and users/navbirth (spongebob)
+-> Reworked board/sort (spongebob)
+-> Reworked board/stats (spongebob)
 
 
 ClanSphere 2009.0.3 >> 2009-12-06
