--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -24,16 +24,26 @@ ___________________________________________________________
 -> Added an admin menu to manage, create and option pages (gahero)
 -> Added a user list to the access module for displaying and adding users to an access (gahero)
 -> Added and improved many modules icons (gahero)
+-> Added replay mirror names addition provided by aschti (hajo)
+-> Added possibility to use features.php for print views (hajo)
+-> Added charset page to check for possible charset related problems (hajo)
 -> Fixed board-counter after delete a thread (spongebob)
 -> Fixed delete own board/subscription and board/attachments (spongebob)
 -> Fixed file size (sort) in files-module (spongebob)
 -> Changed: static linkus-vars now changeable (spongebob)
 -> Changed: rename gallery-image if filename already existent (spongebob)
 -> Changed: user now changeable in cash/edit (spongebob)
+-> Changed: runstartup directory has turned into a mod based info.php setting (hajo)
+-> Changed: the htaccess_example does now contain a charset example (hajo)
 -> Reworked users/nextbirth and users/navbirth (spongebob)
 -> Reworked board/sort (spongebob)
 -> Reworked board/stats (spongebob)
 -> Reworked board/navtop (spongebob)
+-> Reworked events mod (hajo)
+-> Reworked how and what install plus clansphere mod check for in the webserver environment (hajo)
+-> Switched from FCKEditor to the most current version of the CKEditor (hajo)
+
+-- CKEditor 3.2 and FCKEditor Filebrowser 2.6.6 included in this release
 
 
 ClanSphere 2009.0.3 >> 2009-12-06
