updated changelog file

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -34,17 +34,21 @@ ___________________________________________________________
 -> Fixed board-counter after delete a thread (spongebob)
 -> Fixed delete own board/subscription and board/attachments (spongebob)
 -> Fixed file size (sort) in files-module (spongebob)
+-> Fixed php code highlighting in abcode (hajo)
 -> Changed: static linkus-vars now changeable (spongebob)
 -> Changed: rename gallery-image if filename already existent (spongebob)
 -> Changed: user now changeable in cash/edit (spongebob)
 -> Changed: runstartup directory has turned into a mod based info.php setting (hajo)
 -> Changed: the htaccess_example does now contain a charset example (hajo)
 -> Removed sqlite v2 database support due to a lack of needed features (hajo)
+-> Reworked clansphere javascript code to use jQuery (x-ray)
 -> Reworked users/nextbirth and users/navbirth (spongebob)
 -> Reworked board/sort (spongebob)
 -> Reworked board/stats (spongebob)
 -> Reworked board/navtop (spongebob)
+-> Reworked cups mod (spongebob)
 -> Reworked events mod (hajo)
+-> Reworked wars mod (palle!)
 -> Reworked how and what install plus clansphere mod check for in the webserver environment (hajo)
 -> Switched from FCKEditor to the most current version of the CKEditor (hajo)
 -> Updated Slimbox to the most current version that uses jQuery (hajo)
