--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,7 +2,7 @@ CHANGELOG
 --------------------------
 
 
-ClanSphere 2010.0 beta 1 >> 2010-06-XX
+ClanSphere 2010.0 beta 1 >> 2010-06-19
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.3.2
