Reworked SVN after release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,10 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2010.0 >> 2010-XX-XX
+___________________________________________________________
+
+
 
 ClanSphere 2010.0 beta 1 >> 2010-06-19
 ___________________________________________________________
