--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,8 @@ CHANGELOG
 ClanSphere 2010.0 >> 2010-XX-XX
 ___________________________________________________________
 
+-> Fixed template caching in some situations (hajo, schiri)
+-> Updated CKEditor to 3.3.1 (hajo)
 
 
 ClanSphere 2010.0 beta 1 >> 2010-06-19
