--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,11 +7,14 @@ ___________________________________________________________
 -> Added mail notification for every eventguest status change case (hajo)
 -> Added mail signature that is added to the end of every mail (hajo)
 -> Added multi eventguest entry form to events mod (hajo)
+-> Fixed cups module (spongebob)
 -> Fixed maintenance mode in some situations (schiri)
 -> Fixed template caching in some situations (hajo, schiri)
 -> Moved imprint edit link from manage to options (hajo)
 -> Reworked xsrf protection (schiri)
 -> Removed legacy bxcp update and information (hajo)
+-> Removed notification system from users mod as it was too dirty to fix it (hajo)
+-> Switched server classes from phgstats to GameQ (fr33z3m4n)
 -> Updated CKEditor to 3.3.1 (hajo)
 
 
