--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2010.0 >> 2010-XX-XX
+ClanSphere 2010.0 RC 1 >> 2010-07-07
 ___________________________________________________________
 
 -> Added mail notification for every eventguest status change case (hajo)
