default url for clansphere project is www.clansphere.net

--- a/readme
+++ b/readme
@@ -15,6 +15,6 @@ It is developed using PHP and needs a database like MySQL, PostgreSQL, or SQLite
 
 The current version is available under the terms of the 'New BSD License'.
 
-Our project website is located at http://www.csphere.eu
+Our project website is located at http://www.clansphere.net
 
 Look into '/docs' for further documentation.
