--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ ___________________________________________________________
 -> Fixed cups module (spongebob)
 -> Fixed error page for PHP 4 to be shown again (hajo)
 -> Removed a part of the upload htaccess file as it caused some errors (hajo)
+-> Updated amLine to the most current version and added it to externals (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
 
