--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,8 @@ CHANGELOG
 ClanSphere 2010.0 Final >> 2010-07-XX
 ___________________________________________________________
 
+-- Recommended PHP version changed to 5.3.3
+
 -> Added full support for Microsoft IIS 7.0 and 7.5 webserver (hajo)
 -> Added full support for Microsoft SQL Server 2005+ with PDO (hajo)
 -> Fixed cups module (spongebob)
