--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2010.0 Final >> 2010-07-XX
+ClanSphere 2010.0 Final >> 2010-07-26
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.3.3
